--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "assets/css/global.scss";
+@import "assets/css/align.scss";
+@import "assets/css/font.scss";
+@import "assets/css/grid.scss";
+@import "assets/css/help.scss";
