--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,7 +7,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>AI Agent CMS</span>
+  <span class="pl-4">AI Agent</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
