--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-@import "assets/css/global.scss";
-@import "assets/css/align.scss";
-@import "assets/css/font.scss";
-@import "assets/css/grid.scss";
-@import "assets/css/help.scss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
