--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -11,16 +11,17 @@
   <span class="example-spacer"></span>
   <button
     mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
+    class="example-icon"
+    aria-label="Example icon-button with share icon"
   >
-    <mat-icon>favorite</mat-icon>
+    <mat-icon>account_circle</mat-icon>
   </button>
+
   <button
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with share icon"
   >
-    <mat-icon>share</mat-icon>
+    <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
