--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,7 +8,9 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span class="pl-4">AI Agent</span>
-  <span class="example-spacer"></span>
+
+  <span class="spacer"></span>
+
   <button
     mat-icon-button
     class="example-icon"
