--- a/src/app/pages/agent/agent.component.html
+++ b/src/app/pages/agent/agent.component.html
@@ -41,6 +41,7 @@
         <div class="flex gap-2">
           <button mat-mini-fab><mat-icon>edit</mat-icon></button>
           <button mat-mini-fab><mat-icon>delete</mat-icon></button>
+          <button mat-mini-fab><mat-icon>label</mat-icon></button>
         </div>
       </td>
     </ng-container>
