feat:update voice page and shared table

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,7 +6,7 @@
       <app-menu></app-menu>
     </mat-drawer>
 
-    <div class="example-sidenav-content">
+    <div class="example-sidenav-content w-full h-full">
       <router-outlet></router-outlet>
       <!-- <mat-tab-group>
         @for(tab of tabs();track tab.label) {
